--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -26,24 +26,35 @@ ul li {
     margin: 0 15px;
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 15px;
-    color: rgba(255, 255, 255, 0.7);
-    ;
+    color: rgba(22, 22, 22, 0.7);
+    transition: color 0.3s, padding-bottom 0.3s, border-bottom 0.3s;
+    /* Added transition for border-bottom */
+    border-bottom: 1px solid rgba(0, 0, 0, 0);
+    /* Initially transparent */
+    padding-bottom: 0;
+    /* Initially no padding */
 }
 
-.navbar_accueil {
-    letter-spacing: 2px;
-    font-style: italic;
-    font-weight: bold;
-    color: #fff !important;
-}
-
-a.active {
-    color: #fff !important;
+.nav_link:hover {
+    color: rgb(0, 0, 0) !important;
     padding-bottom: 17px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(0, 0, 0);
+}
+
+.navbar_welcome {
+    letter-spacing: 2px;
+    font-size: 18px;
+    font-weight: bold;
+    color: rgb(0, 0, 0) !important;
+}
+
+a.navbar_active {
+    color: rgb(0, 0, 0) !important;
+    padding-bottom: 17px;
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
 
 
 body {
-    background-color: #eb4d55;
+    background-color: #fff;
 }
